added new models

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -584,6 +584,20 @@
     "pyplot.plot(values, cprobs)\n",
     "pyplot.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis of the Graph\n",
+    "- Shape: The graph shows a quickly declining curve starting high and tapering off as x increases. This is typical for the Pareto distribution, reflecting the \"heavy-tailed\" nature where smaller values are much more common than larger values.\n",
+    "- Interpretation: In practical terms, if this were a model of wealth distribution (a common use of the Pareto distribution), it would suggest that a large portion of the population has relatively low wealth, but as wealth increases, the frequency of people with higher wealth decreases rapidly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
