--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -597,6 +597,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Probability Density Function (PDF)\n",
+    "\n",
+    "- Applicability: PDF is used with continuous random variables. These variables can take infinitely many values, often any value within an interval on the real number line, such as the exact time a student arrives at school or the exact amount of milk in a jug.\n",
+    "- Function: The PDF describes the relative likelihood for this random variable to occur at each point. It is not the probability that the variable exactly equals any value (those probabilities are all zero for continuous variables) but indicates areas where the variable is more likely to occur."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
