added new models

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -603,6 +603,21 @@
     "- Applicability: PDF is used with continuous random variables. These variables can take infinitely many values, often any value within an interval on the real number line, such as the exact time a student arrives at school or the exact amount of milk in a jug.\n",
     "- Function: The PDF describes the relative likelihood for this random variable to occur at each point. It is not the probability that the variable exactly equals any value (those probabilities are all zero for continuous variables) but indicates areas where the variable is more likely to occur."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### So lets say X is wealth for this example, the curve up and into the right is stating that a 90% of the wealth is in that range?\n",
+    "- Yes, that's a good way to interpret the cumulative distribution function (CDF) of the Pareto distribution in the context of wealth distribution. The CDF tells us the proportion of the total wealth (or whatever variable we're measuring) that lies below or at a certain level.\n",
+    "\n",
+    "## Practical Example:\n",
+    "#### If you're analyzing the wealth distribution in a certain region and find that the CDF reaches 0.9 at $100,000, and nearly levels off around $1,000,000 with the CDF at 0.99, you can conclude:\n",
+    "\n",
+    "- 90% of the population has $100,000 or less in wealth.\n",
+    "- An additional 9% of the population falls between $100,000 and $1,000,000.\n",
+    "- The top 1% holds wealth above $1,000,000, with each incremental increase in wealth affecting smaller and smaller portions of the population.\n"
+   ]
   }
  ],
  "metadata": {
