added new models

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -691,6 +691,23 @@
     "pyplot.plot(values, probabilities)\n",
     "pyplot.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nonparametric Density Estimation\n",
+    "\n",
+    "#### In some cases, a data sample may not resemble a common probability distribution or cannot be easily made to fit the distribution. This is often the case when the data has two peaks (bimodal distribution) or many peaks (multimodal distribution). In this case, parametric density estimation is not feasible and alternative methods can be used that do not use a common distribution. Instead, an algorithm is used to approximate the probability distribution of the data without a pre-defined distribution, referred to as a nonparametric method. The distributions will still have parameters but are not directly controllable in the same way as simple probability distributions. For example, a nonparametric method might estimate the density using all observations in a random sample, in effect making all observations in the sample parameters. Perhaps the most common nonparametric approach for estimating the probability density function of a continuous random variable is called kernel smoothing, orK ernel density estimation, KDE for short.\n",
+    "- Kernel Density Estimation: Nonparametric method for using a dataset to estimating probabilities for new points.\n",
+    "\n",
+    "#### In this case, a kernel is a mathematical function that returns a probability for a given value of a random variable. The kernel effectively smooths or interpolates the probabilities across the range of outcomes for a random variable such that the sum of probabilities equals one, a requirement of well-behaved probabilities. The kernel function weights the contribution of observations from a data sample based on their relationship or distance to a given query sample for which the probability is requested."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
