added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
@@ -10,6 +10,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- Maximum Likelihood Estimation is a probabilistic framework for solving the problem of density estimation.\n",
+    "- It involves maximizing a likelihood function in order to find the probability distribution and parameters that best explain the observed data.\n",
+    "- It provides a framework for predictive modeling in machine learning where finding model parameters can be framed as an optimization problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
