--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
@@ -28,9 +28,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability 0.8\n",
+      "Odds 4.0\n",
+      "Probability 0.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example of converting between probability and odds # define our probability of success\n",
+    "prob = 0.8\n",
+    "print('Probability %.1f' % prob)\n",
+    "# convert probability to odds\n",
+    "odds = prob / (1 - prob) \n",
+    "print('Odds %.1f' % odds)\n",
+    "# convert back to probability \n",
+    "prob = odds / (odds + 1) \n",
+    "print('Probability %.1f' % prob)"
+   ]
   }
  ],
  "metadata": {
@@ -40,7 +62,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
