added new phase

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
@@ -53,6 +53,41 @@
     "prob = odds / (odds + 1) \n",
     "print('Probability %.1f' % prob)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability 0.8\n",
+      "Odds 4.0\n",
+      "Log-Odds 1.4\n",
+      "Probability 0.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example of converting between probability and log-odds\n",
+    "from math import log\n",
+    "from math import exp\n",
+    "# define our probability of success \n",
+    "prob = 0.8\n",
+    "print('Probability %.1f' % prob)\n",
+    "# convert probability to odds\n",
+    "\n",
+    "odds = prob / (1 - prob) \n",
+    "print('Odds %.1f' % odds)\n",
+    "# convert odds to log-odds\n",
+    "logodds = log(odds)\n",
+    "print('Log-Odds %.1f' % logodds)\n",
+    "# convert log-odds to a probability \n",
+    "prob = 1 / (1 + exp(-logodds)) \n",
+    "print('Probability %.1f' % prob)"
+   ]
   }
  ],
  "metadata": {
