added new phase

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
@@ -88,6 +88,18 @@
     "prob = 1 / (1 + exp(-logodds)) \n",
     "print('Probability %.1f' % prob)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### It is common in optimization problems to prefer to minimize the cost function rather than to maximize it. Therefore, the negative of the log-likelihood function is used, referred to generally as a Negative Log-Likelihood (NLL) function.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
