added new phase

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Maximum-Likelihood-Est.ipynb
@@ -158,6 +158,46 @@
     "pyplot.hist(X, bins=50, density=True)\n",
     "pyplot.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example of fitting a gaussian mixture model with expectation maximization\n",
+    "from numpy import hstack\n",
+    "from numpy.random import normal\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "# generate a sample\n",
+    "X1 = normal(loc=20, scale=5, size=3000)\n",
+    "X2 = normal(loc=40, scale=5, size=7000)\n",
+    "X = hstack((X1, X2))\n",
+    "# reshape into a table with one column\n",
+    "X = X.reshape((len(X), 1))\n",
+    "# fit model\n",
+    "model = GaussianMixture(n_components=2, init_params='random') \n",
+    "model.fit(X)\n",
+    "# predict latent values\n",
+    "yhat = model.predict(X)\n",
+    "# check latent value for first few points\n",
+    "print(yhat[:100])\n",
+    "# check latent value for last few points\n",
+    "print(yhat[-100:])"
+   ]
   }
  ],
  "metadata": {
