added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
@@ -30,6 +30,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### We can make this clear with a Smoke and Fire example. What is the probability that there is fire given that there is smoke, where P(Fire) is the Prior, P(Smoke|Fire) is the Likelihood, and P(Smoke) is the evidence:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
