added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
@@ -37,6 +37,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- P(Fire | Smoke) = P(Smoke | Fire) * P(Fire)  / P(Smoke)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
