--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
@@ -44,12 +44,77 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### We can also think about the calculation in the terms of a binary classifier. For example, P(B|A) may be referred to as the True Positive Rate (TPR) or the sensitivity, P(B|not A) may be referred to as the False Positive Rate (FPR), the complement P(not B|not A) may be referred to as the True Negative Rate (TNR) or specificity, and the value we are calculating P(A|B) may be referred to as the Positive Predictive Value (PPV) or the precision."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example: Elderly Fall and Death\n",
+    "#### Consider the case where an elderly person (over 80 years of age) falls, what is the probability that they will die from the fall? Let’s assume that the base rate of someone elderly dying P (A) is 10%, and the base rate for elderly people falling P(B) is 5%, and from all elderly people, 7% of those that die had a fall P(B|A). Let’s plug what we know into the theorem:\n",
+    "\n",
+    "- P(Die From Fall | Elderly Person)\n",
+    "- P(A) = 10%\n",
+    "- P(B) = 5%\n",
+    "- P(B |A) = 7%\n",
+    "- P(Not A) = 90%\n",
+    "- P(Not B) = 95%\n",
+    "\n",
+    "#### 7% * 10% / 5% = P( Fall | die) * p(die) / P(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(A|B) = 14.000%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate the probability of an elderly person dying from a fall\n",
+    "# calculate P(A|B) given P(B|A), P(A) and P(B)\n",
+    "def bayes_theorem(p_a, p_b, p_b_given_a):\n",
+    "  # calculate P(A|B) = P(B|A) * P(A) / P(B)\n",
+    "  p_a_given_b = (p_b_given_a * p_a) / p_b\n",
+    "  return p_a_given_b\n",
+    "# P(A)\n",
+    "p_a = 0.10\n",
+    "# P(B)\n",
+    "p_b = 0.05\n",
+    "# P(B|A)\n",
+    "p_b_given_a = 0.07\n",
+    "# calculate P(A|B)\n",
+    "result = bayes_theorem(p_a, p_b, p_b_given_a)\n",
+    "# summarize\n",
+    "print('P(A|B) = %.3f%%' % (result * 100))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
