added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
@@ -105,13 +105,48 @@
     "#### Consider the case where we receive an email and the spam detector puts it in the spam folder, what is the probability it was spam? Let’s assume some details such as 2% of the email we receive is spam P(A). Let’s assume that the spam detector is really good and when an email is spam that it detects it P(B|A) with an accuracy of 99%, and when an email is not spam, it will mark it as spam with a very low rate of 0.1% P(B|not A). Let’s plug what we know into the theorem:\n",
     "\n",
     "- P(Spam | Detected) = P(Detected | Spam) * P(Spam) / P(Detected)\n",
-    "- P(Spam | Dectected) = 0.99 * 0.02 / P(Detected)"
+    "- P(Spam | Dectected) = 0.99 * 0.02 / P(Detected)\n",
+    "- What is P(Detected) ? We can use the law of total probability to solve P(detected)\n",
+    "- P(Detected) = P(Detected | Spam) * P(Spam) + P(Detected| Not Spam) * P(Not Spam)\n",
+    "-  (0.99 * 0.02) + (0.91 * 0.01) = 0.02078"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(A|B) = 95.284%\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# calculate the probability of an email in the spam folder being spam\n",
+    "# calculate P(A|B) given P(A), P(B|A), P(B|not A)\n",
+    "def bayes_theorem(p_a, p_b_given_a, p_b_given_not_a):\n",
+    "  # calculate P(not A)\n",
+    "  not_a = 1 - p_a\n",
+    "  # calculate P(B)\n",
+    "  p_b = p_b_given_a * p_a + p_b_given_not_a * not_a\n",
+    "  # calculate P(A|B)\n",
+    "  p_a_given_b = (p_b_given_a * p_a) / p_b\n",
+    "  return p_a_given_b\n",
+    "# P(A)\n",
+    "p_a = 0.02\n",
+    "# P(B|A)\n",
+    "p_b_given_a = 0.99\n",
+    "# P(B|not A)\n",
+    "p_b_given_not_a = 0.001\n",
+    "# calculate P(A|B)\n",
+    "result = bayes_theorem(p_a, p_b_given_a, p_b_given_not_a)\n",
+    "# summarize\n",
+    "print('P(A|B) = %.3f%%' % (result * 100))"
+   ]
   }
  ],
  "metadata": {
