added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Bayesian-Prob.ipynb
@@ -147,6 +147,14 @@
     "# summarize\n",
     "print('P(A|B) = %.3f%%' % (result * 100))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example: Liars and Lie Detectors\n",
+    "#### Consider the case where a person is tested with a lie detector and gets a positive result suggesting that they are lying, what is the probability that the person is indeed lying? Let’s assume some details, such as most people that are tested are telling the truth, such as 98%, meaning (1 − 0.98) or 2% are liars P(A). Let’s also assume that when someone is lying that the test can detect them well, but not great, such as 72% of the time P(B|A). Let’s also assume that when the machine says they are not lying, this is true 97% of the time P(not B| not A). Let’s plug what we know into the theorem:\n"
+   ]
   }
  ],
  "metadata": {
