--- a/Mathematics/Linear-Algebra/Linear-Algebra-For-AI/Vectors.ipynb
+++ b/Mathematics/Linear-Algebra/Linear-Algebra-For-AI/Vectors.ipynb
@@ -1,11 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Vectors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Span\n",
+    "\n",
+    "#### Another thing we can learn from this experiment is the concept of span; the continuing black line is an example of a span. All of the vectors that result from a linear combination define the span. For instance, in the case of −→i and −→j, the span is the entire vector space because we can get all the vectors within the vector space with a linear combination of these vectors, whereas with −→  z and −→  w, the span is a line."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basis\n",
+    "\n",
+    "##### With this, we have arrived at the definition of a basis; for a set of vectors to be considered a basis of a vector space, these vectors need to be linearly independent, and their span has to be equal to the entire vector space, therefore  and  form a basis of ℝ2. A vector space can have more than one basis, and ℝ2 is one example of a space that contains many basis. \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
