--- a/Mathematics/Linear-Algebra/Linear-Algebra-For-AI/Matrix.ipynb
+++ b/Mathematics/Linear-Algebra/Linear-Algebra-For-AI/Matrix.ipynb
@@ -10,6 +10,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### A change of basis is not a linear transformation. You can do a change of basis via an isomorphism, which is a linear transformation between the same spaces. Remember that changing the basis just changes the perspective of the same vector, whereas a linear transformation, as the name suggests, can change the vector; it is a transformation. For example, consider an arbitrary mapping from ℝ2 to ℝ3:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
