added new models

--- a/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
@@ -48,9 +48,54 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(Y = -10) = 0.0010\n",
+      "P(Y = -8) = 0.0098\n",
+      "P(Y = -6) = 0.0439\n",
+      "P(Y = -4) = 0.1172\n",
+      "P(Y = -2) = 0.2051\n",
+      "P(Y = 0) = 0.2461\n",
+      "P(Y = 2) = 0.2051\n",
+      "P(Y = 4) = 0.1172\n",
+      "P(Y = 6) = 0.0439\n",
+      "P(Y = 8) = 0.0098\n",
+      "P(Y = 10) = 0.0010\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.special import comb\n",
+    "import numpy as np\n",
+    "\n",
+    "def random_walk_pmf(n):\n",
+    "    # Dictionary to store the PMF\n",
+    "    pmf = {}\n",
+    "    \n",
+    "    # Loop over all possible end positions y from -n to n with step size 2\n",
+    "    for y in range(-n, n+1, 2):\n",
+    "        k = (y + n) // 2  # Number of steps to the right\n",
+    "        \n",
+    "        # Check if y+n is even and k is within the valid range\n",
+    "        if (y + n) % 2 == 0 and 0 <= k <= n:\n",
+    "            pmf[y] = comb(n, k) * (0.5**n)  # Calculate PMF using the binomial coefficient\n",
+    "            \n",
+    "    return pmf\n",
+    "\n",
+    "# Example usage\n",
+    "n_steps = 10  # Number of steps in the random walk\n",
+    "pmf_result = random_walk_pmf(n_steps)\n",
+    "\n",
+    "# Print the results\n",
+    "for position, probability in pmf_result.items():\n",
+    "    print(f'P(Y = {position}) = {probability:.4f}')\n"
+   ]
   }
  ],
  "metadata": {
@@ -60,7 +105,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
