added new models

--- a/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
@@ -96,6 +96,35 @@
     "for position, probability in pmf_result.items():\n",
     "    print(f'P(Y = {position}) = {probability:.4f}')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. (a) Independent Bernoulli trials are performed, with probability 1/2 of success, until there has been at least one success. Find the PMF of the number of trials performed.\n",
+    "\n",
+    "- K is the trial number on which the first success occurs\n",
+    "- p is the probability of success on each trial,\n",
+    "- (1-p)^k-1 is the probabaility of having k-1 failures before the first success\n",
+    "\n",
+    "- P(X=k) = (1-p)^k-1 x p\n",
+    "\n",
+    "- P(X=k) = (1/2)^k-1 * 1/2\n",
+    "- P(X=k) = 1/2^k\n",
+    "- For k = 1,2,3 ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
