added new models

--- a/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
@@ -124,7 +124,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Geometric Distribution\n",
+    "#### The geometric distribution is used to model the number of trials until the first success in a sequence of independent Bernoulli trials, where each trial has a constant probability of success. The key characteristic of the geometric distribution is that it describes the trials up to and including the first success.\n",
+    "\n",
+    "#### One of the unique features of the geometric distribution is its memoryless property. This means that the probability of achieving the first success in future trials does not depend on how many trials have already been performed without success. Mathematically, this can be expressed as:\n",
+    "- P(X > n +k | X > n) = P(X > k)"
+   ]
   }
  ],
  "metadata": {
