--- a/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
@@ -131,6 +131,21 @@
     "#### One of the unique features of the geometric distribution is its memoryless property. This means that the probability of achieving the first success in future trials does not depend on how many trials have already been performed without success. Mathematically, this can be expressed as:\n",
     "- P(X > n +k | X > n) = P(X > k)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (b) Independent Bernoulli trials are performed, with probability 1/2 of success, until there has been at least one success and at least one failure. Find the PMF of the number of trials performed.\n",
+    "\n",
+    "#### For either case, if the first outcome occurs on the first trial, the subsequent trials follow a geometric distribution (with p =1/2) for the opposite event.\n",
+    "- The probability of stopping after k trials k >= 2 is determined by P(X=K) = (1/2) * (1/2)^k-1 + (1/2) * (1/2)^k-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
