added new notes

--- a/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
@@ -146,7 +146,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Definition of Logarithms\n",
+    "\n",
+    "#### A logarithm asks the question: To what power must a given base b be raised to produce a certain number x?\n",
+    "\n",
+    "#### Formally, if 𝑏^𝑦 =𝑥 then log subscript b(x) = y. Here, b is the base of the algorithm, x is the argument and y is the logarithm of x to base b."
+   ]
   }
  ],
  "metadata": {
