added new notes

--- a/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Random-Variables.ipynb
@@ -151,8 +151,15 @@
     "\n",
     "#### A logarithm asks the question: To what power must a given base b be raised to produce a certain number x?\n",
     "\n",
-    "#### Formally, if 𝑏^𝑦 =𝑥 then log subscript b(x) = y. Here, b is the base of the algorithm, x is the argument and y is the logarithm of x to base b."
+    "#### Formally, if 𝑏^𝑦 =𝑥 then log subscript b(x) = y. Here, b is the base of the algorithm, x is the argument and y is the logarithm of x to base b.\n",
+    "\n",
+    "#### Logarithms, by turning multiplicative relationships into additive ones and exponential relationships into linear ones, provide a powerful tool for analysis, simplification, and understanding in a wide range of scientific, engineering, financial, and statistical contexts. Their integral role in modern technology and science underscores their enduring relevance and utility."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
