added new notes

--- a/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
@@ -10,6 +10,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### The expected value of a random variable is indeed a weighted average of all possible values that the variable can take, with each value being weighted by its probability of occurrence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
