--- a/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
@@ -15,9 +15,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected Value for rolling a fair six-sided die: 3.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "outcomes = [1, 2, 3, 4, 5, 6]\n",
+    "probabilities = [1/6] * 6\n",
+    "\n",
+    "expected_value = sum(outcome * probability for outcome, probability in zip(outcomes, probabilities))\n",
+    "print(f\"Expected Value for rolling a fair six-sided die: {expected_value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected Value for custom discrete distribution: 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "outcomes = [0, 1, 2, 3]\n",
+    "probabilities = [0.1, 0.2, 0.3, 0.4]\n",
+    "\n",
+    "expected_value = sum(outcome * probability for outcome, probability in zip(outcomes, probabilities))\n",
+    "print(f\"Expected Value for custom discrete distribution: {expected_value}\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -27,7 +64,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
