added new notes

--- a/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
@@ -55,6 +55,35 @@
     "expected_value = sum(outcome * probability for outcome, probability in zip(outcomes, probabilities))\n",
     "print(f\"Expected Value for custom discrete distribution: {expected_value}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected Value for the exponential distribution: 0.9999999999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.integrate import quad\n",
+    "\n",
+    "lambda_param = 1\n",
+    "\n",
+    "def exponential_pdf(x):\n",
+    "    return lambda_param * np.exp(-lambda_param * x)\n",
+    "\n",
+    "def integrand(x):\n",
+    "    return x * exponential_pdf(x)\n",
+    "\n",
+    "result, _ = quad(integrand, 0, np.inf)\n",
+    "print(f\"Expected Value for the exponential distribution: {result}\")"
+   ]
   }
  ],
  "metadata": {
