added new notes

--- a/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
@@ -84,6 +84,29 @@
     "result, _ = quad(integrand, 0, np.inf)\n",
     "print(f\"Expected Value for the exponential distribution: {result}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Negative Binomial Distribution \n",
+    "\n",
+    "#### The negative binomial distribution is a probability distribution that models the number of trials needed to achieve a specified number of successes in a sequence of independent and identically distributed Bernoulli trials. This distribution extends the geometric distribution, which only counts the number of trials until the first success.\n",
+    "\n",
+    "- X is the number of failures that occur\n",
+    "- k is a specific number of failures\n",
+    "- r is the number of successes required\n",
+    "- p is the probability of success on each trial\n",
+    "\n",
+    "- P(X = k) = (\n",
+    "-             k + r -1\n",
+    "              r-1      )  p^r(1-p)^k\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
