added new notes

--- a/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Epexctation.ipynb
@@ -100,7 +100,12 @@
     "\n",
     "- P(X = k) = (\n",
     "-             k + r -1\n",
-    "              r-1      )  p^r(1-p)^k\n"
+    "              r-1      )  p^r(1-p)^k\n",
+    "\n",
+    "#### Scenarios\n",
+    "\n",
+    "- Quality Control: Determining the number of products that need to be tested before a certain number of defective items are found.\n",
+    "- Estimating the number of risky events (like loan defaults or company bankruptcies) before reaching a financial threshold that triggers a response or policy change."
    ]
   },
   {
