added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -9,14 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06538461538461539"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "P_coffe = 0.65\n",
     "p_cancer = .005\n",
     "\n",
-    "# p_cancer_given_coffe = P(coffe | Cancer) * P(cancer) / P(Coffee)\n"
+    "# p_cancer_given_coffe = P(coffe | Cancer) * P(cancer) / P(Coffee)\n",
+    "\n",
+    "p = ( .85 *.005)/ .065\n",
+    "p\n"
    ]
   },
   {
